d3d12 build regression: d3d12video.h: error: expected ‘;’ at end of member declaration
Broken in git somewhere in the last 30 hours.
Full build log: https://launchpadlibrarian.net/601855350/buildlog_ubuntu-kinetic-amd64.mesa_22.2git2205180600.b54516oibaf~k_BUILDING.txt.gz
Error:
In file included from ../src/gallium/drivers/d3d12/d3d12_video_types.h:37,
from ../src/gallium/drivers/d3d12/d3d12_video_dec.h:27,
from ../src/gallium/drivers/d3d12/d3d12_context.cpp:37:
/usr/include/directx/d3d12video.h:1086:27: error: ‘NumTexture2Ds’ is not a type
1086 | _Field_size_full_opt_(NumTexture2Ds) ID3D12VideoDecoderHeap **ppHeaps;
| ^~~~~~~~~~~~~
/usr/include/directx/d3d12video.h:1086:40: error: expected ‘;’ at end of member declaration
1086 | _Field_size_full_opt_(NumTexture2Ds) ID3D12VideoDecoderHeap **ppHeaps;
| ^
| ;