src/gallium/drivers/d3d12/d3d12_context.cpp
@@ -34,10 +34,11 @@
 #include "d3d12_root_signature.h"
 #include "d3d12_screen.h"
 #include "d3d12_surface.h"
+#ifdef HAVE_GALLIUM_D3D12_VIDEO
 #include "d3d12_video_dec.h"
 #include "d3d12_video_enc.h"
 #include "d3d12_video_buffer.h"
-
+#endif
 #include "util/u_atomic.h"
 #include "util/u_blitter.h"
 #include "util/u_dual_blend.h"
@@ -2378,6 +2379,7 @@ d3d12_get_reset_status(struct pipe_context *pctx)
    }
 }
 
+#ifdef HAVE_GALLIUM_D3D12_VIDEO
 struct pipe_video_codec*
 d3d12_video_create_codec(struct pipe_context *context,
                          const struct pipe_video_codec *templat)
@@ -2391,6 +2393,7 @@ d3d12_video_create_codec(struct pipe_context *context,
         return nullptr;
     }
 }
+#endif
 
 struct pipe_context *
 d3d12_context_create(struct pipe_screen *pscreen, void *priv, unsigned flags)
@@ -2506,10 +2509,11 @@ d3d12_context_create(struct pipe_screen *pscreen, void *priv, unsigned flags)
    d3d12_context_query_init(&ctx->base);
    d3d12_context_blit_init(&ctx->base);
 
+#ifdef HAVE_GALLIUM_D3D12_VIDEO
    // Add d3d12 video functions entrypoints
    ctx->base.create_video_codec = d3d12_video_create_codec;
    ctx->base.create_video_buffer = d3d12_video_buffer_create;
-
+#endif
    slab_create_child(&ctx->transfer_pool, &d3d12_screen(pscreen)->transfer_pool);
    slab_create_child(&ctx->transfer_pool_unsync, &d3d12_screen(pscreen)->transfer_pool);
 
