src/gallium/drivers/d3d12/d3d12_screen.cpp
@@ -28,7 +28,9 @@
 #include "d3d12_context.h"
 #include "d3d12_debug.h"
 #include "d3d12_fence.h"
+#ifdef HAVE_GALLIUM_D3D12_VIDEO
 #include "d3d12_video_screen.h"
+#endif
 #include "d3d12_format.h"
 #include "d3d12_residency.h"
 #include "d3d12_resource.h"
@@ -1240,7 +1242,9 @@ d3d12_init_screen(struct d3d12_screen *screen, IUnknown *adapter)
 
    d3d12_screen_fence_init(&screen->base);
    d3d12_screen_resource_init(&screen->base);
+#ifdef HAVE_GALLIUM_D3D12_VIDEO
    d3d12_screen_video_init(&screen->base);
+#endif
    slab_create_parent(&screen->transfer_pool, sizeof(struct d3d12_transfer), 16);
 
    struct pb_desc desc;
